--- a/Pages/employeePayrollApp.html
+++ b/Pages/employeePayrollApp.html
@@ -158,6 +158,7 @@
         </form>
     </div>
     <script src="../JavaScript/employeePayrollApp.js"></script>
+    <script src="../JavaScript/EmployeePayroll.js"></script>
 </body>
 
 </html>
