[Akshay]  Refactor . error tags are added

--- a/Pages/employeePayrollApp.html
+++ b/Pages/employeePayrollApp.html
@@ -25,6 +25,7 @@
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
                 <input class="input" type="text" id="name" name="name" placeholder="Your name" required />
+                <error-output class="text-error" for="text"></error-output>
             </div>
             <!----UC3: Added profile pics for custom faces ---->
             <div class="row-content">
@@ -142,6 +143,7 @@
                         <option value="2016">2016</option>
                     </select>
                 </div>
+                <error-output class="date-error" for="startDate"></error-output>
             </div>
             <!----UC6---->
             <div class="row-content">
