--- a/Pages/home.html
+++ b/Pages/home.html
@@ -3,12 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Css/home.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;
+        0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <title>Employee Payroll Portal</title>
+    <script src="../JavaScript/home.js"></script>
 </head>
 
 <body>
-    <h1>You have cancelled the form</h1>
-
+    <header class="header-content header">
+        <div class="logo-content">
+            <img src="../Assets/images/logo.png" width=60px alt="logo">
+            <div>
+                <span class="emp-text ">EMPLOYEE</span>
+                <span class="emp-text emp-payroll">PAYROLL</span>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
