--- a/Pages/home.html
+++ b/Pages/home.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- UC14 -->
     <header class="header-content header">
         <div class="logo-content">
             <img src="../Assets/images/logo.png" width=60px alt="logo">
@@ -23,6 +24,16 @@
             </div>
         </div>
     </header>
+    <!-- UC15 -->
+    <div class="main-content">
+        <div class="header-content">
+            <div class="emp-detail-text">
+                Employee Details <div class="emp-count">10</div>
+            </div>
+            <a href="./employeePayrollApp.html" class="add-button">
+                <img src="../Assets/icons/add-24px.svg" width="35px" alt="" />Add User</a>
+        </div>
+    </div>
 </body>
 
 </html>
