--- a/Pages/home.html
+++ b/Pages/home.html
@@ -37,6 +37,9 @@
         </div>
     </div>
     <script src="../JavaScript/home.js"></script>
+    <script src="../JavaScript/site_properties.js"></script>
+    <script src="../JavaScript/utility.js"></script>
+    <script src="../JavaScript/employeePayrollApp.js"></script> 
 </body>
 
 </html>
