[Akshay] Refactor . date validation is added with update and delete functionality

--- a/Pages/employeePayrollApp.html
+++ b/Pages/employeePayrollApp.html
@@ -87,7 +87,7 @@
             <!-- UC5: Adding Start Date -->
             <div class="row-content">
                 <label class="label text" for="startDate"> Start Date </label>
-                <div>
+                <div id="date">
                     <select id="day" name="Day">
                         <option value="1">1</option>
                         <option value="2">2</option>
