--- a/Pages/employeePayrollApp.html
+++ b/Pages/employeePayrollApp.html
@@ -20,7 +20,7 @@
     </header>
     <!-- UC2:Addding form and with field name -->
     <div class="form-content">
-        <form class="form" action="#" onsubmit="save();return false">
+        <form class="form" action="#" onreset="reset()" onsubmit="save(event);">
             <div class="form-head">Employee Payroll Form</div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
@@ -161,6 +161,8 @@
     </div>
     <script src="../JavaScript/employeePayrollApp.js"></script>
     <script src="../JavaScript/EmployeePayroll.js"></script>
+    <script src="../JavaScript/utility.js"></script>
+    <script src="../JavaScript/site_properties.js"></script>
 </body>
 
 </html>
