[Akshay] Refactor . refrence of httpServices is given

--- a/Pages/employeePayrollApp.html
+++ b/Pages/employeePayrollApp.html
@@ -163,6 +163,7 @@
     <script src="../JavaScript/EmployeePayroll.js"></script>
     <script src="../JavaScript/utility.js"></script>
     <script src="../JavaScript/site_properties.js"></script>
+    <script src="../JavaScript/http_services.js"></script>
 </body>
 
 </html>
