--- a/Pages/home.html
+++ b/Pages/home.html
@@ -40,6 +40,7 @@
     <script src="../JavaScript/site_properties.js"></script>
     <script src="../JavaScript/utility.js"></script>
     <script src="../JavaScript/employeePayrollApp.js"></script>
+    <script src="../JavaScript/http_services.js"></script>
 </body>
 
 </html>
